stripe billing integration (#32)
* stripe billing integration

* small refactor

* gitignore changes
